--- a/app/src/main/res/layout/activity_profile_set.xml
+++ b/app/src/main/res/layout/activity_profile_set.xml
@@ -36,7 +36,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/border2"
-            android:scaleType="fitCenter"
+            android:scaleType="fitXY"
             app:srcCompat="@drawable/nopic" />
 
         <Button
@@ -131,12 +131,12 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView2"
+                    android:id="@+id/imageView3"
                     android:layout_width="wrap_content"
                     android:layout_height="90dp"
                     android:layout_weight="1"
                     android:background="@drawable/border2"
-                    android:scaleType="fitCenter"
+                    android:scaleType="fitXY"
                     app:srcCompat="@drawable/docu" />
 
                 <Button
