--- a/app/src/main/res/layout/fragment_upload_bidding.xml
+++ b/app/src/main/res/layout/fragment_upload_bidding.xml
@@ -81,6 +81,7 @@
         android:text="Step 2: Specify the type of Bidding" />
 
     <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/radiogroup"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -99,7 +100,8 @@
             android:layout_height="wrap_content"
             android:text="Sealed Bid" />
 
-        <RadioButton android:id="@+id/buymenow"
+        <RadioButton
+            android:id="@+id/buymebid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Buy me now" />
@@ -130,7 +132,7 @@
                 app:srcCompat="@drawable/nopic" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/browse1"
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
@@ -156,7 +158,7 @@
                 app:srcCompat="@drawable/nopic" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/browse2"
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
@@ -182,7 +184,7 @@
                 app:srcCompat="@drawable/nopic" />
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/browse3"
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
@@ -194,8 +196,9 @@
                 android:textSize="14dp" />
         </LinearLayout>
     </LinearLayout>
+
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/upload"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="40dp"
