--- a/app/src/main/res/layout/fragment_upload_bidding.xml
+++ b/app/src/main/res/layout/fragment_upload_bidding.xml
@@ -1,3 +1,9 @@
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -5,6 +11,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="12dp"
+    android:theme="@style/AppTheme2"
     tools:context="com.example.kuroro.auction.UploadBidding">
 
     <TextView
@@ -22,16 +29,27 @@
         android:hint="Item Name"
         android:inputType="textPersonName" />
 
-
-
-    <EditText
-        android:id="@+id/editText8"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ems="10"
-        android:hint="Item Price"
-        android:inputType="textPersonName" />
+        android:orientation="horizontal">
+        <EditText
+            android:id="@+id/editText8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:hint="Item Price"
+            android:inputType="textPersonName" />
+        <EditText
+            android:id="@+id/editText9"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:hint="Item Quantity"
+            android:inputType="textPersonName" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -52,7 +70,6 @@
                 android:id="@+id/decrease"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:onClick="decreaseInteger"
                 android:text="-" />
 
             <TextView
@@ -70,7 +87,6 @@
                 android:id="@+id/increase"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:onClick="increaseInteger"
                 android:text="+" />
         </LinearLayout>
     </LinearLayout>
@@ -105,6 +121,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Buy me now" />
+    </RadioGroup>
+    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/radiogroup2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Condition:"/>
+        <RadioButton android:id="@+id/notused"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Used" />
+
+        <RadioButton android:id="@+id/used"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Not Used" />
+
     </RadioGroup>
 
     <TextView
@@ -196,6 +232,11 @@
                 android:textSize="14dp" />
         </LinearLayout>
     </LinearLayout>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Bidders Note"
+        android:id="@+id/note"/>
 
     <Button
         android:id="@+id/upload"
@@ -210,3 +251,4 @@
         android:textSize="14dp" />
 
 </LinearLayout>
+</ScrollView>
