--- a/app/src/main/res/layout/bid_row_layout.xml
+++ b/app/src/main/res/layout/bid_row_layout.xml
@@ -27,4 +27,10 @@
         android:layout_height="wrap_content"
         android:text="TextView" />
 
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
 </LinearLayout>
