--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,19 +5,19 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/viewitems"
             android:icon="@drawable/ic_menu_camera"
             android:title="View Items" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/managebid"
             android:icon="@drawable/ic_menu_gallery"
             android:title="Manage Bid" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/recentoffer"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="View Recent Offers" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/notification"
             android:icon="@drawable/ic_menu_manage"
             android:title="Notifications" />
     </group>
