--- a/app/src/main/res/layout/fragment_upload_bidding.xml
+++ b/app/src/main/res/layout/fragment_upload_bidding.xml
@@ -51,45 +51,18 @@
             android:inputType="textPersonName" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
         <TextView
-            android:layout_width="100dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Days to be bid:" />
-        <LinearLayout
-            android:layout_width="230dp"
+            android:text="Date of Final Bidding: " />
+
+        <DatePicker
+            android:id="@+id/datepicker"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="-5dp"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/decrease"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:text="-" />
-
-            <TextView
-                android:id="@+id/integer_number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
-                android:layout_marginRight="40dp"
-                android:layout_marginTop="16dp"
-                android:text="1"
-                android:textSize="32sp"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/increase"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:text="+" />
-        </LinearLayout>
-    </LinearLayout>
+            android:layout_weight="1"
+            style="@style/date_picker_theme"/>
     <TextView
         android:layout_width="300dp"
         android:layout_height="wrap_content"
