--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,5 +26,7 @@
         <item name="windowActionBar">false</item>
 
     </style>
+    <style name="date_picker_theme" parent="@android:style/Widget.DatePicker" />
+
 
 </resources>
