--- a/app/src/main/res/layout/fragment_bid_history.xml
+++ b/app/src/main/res/layout/fragment_bid_history.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.kuroro.auction.BidHistory">
+    tools:context="com.example.kuroro.auction.BidHistoryView">
 
     <TextView
         android:layout_width="wrap_content"
