--- a/app/src/main/res/layout/fragment_own_push_notif.xml
+++ b/app/src/main/res/layout/fragment_own_push_notif.xml
@@ -3,15 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
-    tools:context="com.example.kuroro.auction.ShowAllBid">
+    tools:context="com.example.kuroro.auction.ManageOwn">
 
-    <!-- TODO: Update blank fragment layout -->
-
-    <TextView
-        android:text="Home / All Auctions"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
