--- a/app/src/main/res/layout/bid_row_layout.xml
+++ b/app/src/main/res/layout/bid_row_layout.xml
@@ -1,66 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_height="200dp">
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="150dp"
+        android:layout_height="100dp"
+        android:scaleType="fitXY"
+        app:srcCompat="@drawable/bg" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="100dp"
+        android:layout_height="100dp">
+
+    </LinearLayout>
+
+
+
+    <!--<ImageButton-->
+        <!--android:id="@+id/imageButton"-->
+        <!--android:layout_width="150dp"-->
+        <!--android:layout_height="60dp"-->
+        <!--android:layout_marginStart="210dp"-->
+        <!--android:layout_marginTop="-30dp"-->
+        <!--android:backgroundTint="@android:color/transparent"-->
+        <!--android:clickable="false"-->
+        <!--android:enabled="true"-->
+        <!--android:scaleType="fitXY"-->
+        <!--android:src="@drawable/bidbid"-->
+        <!--android:text="Bid now" />-->
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-        <TextView
-            android:width="200dp"
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textColor="@color/dot_active" />
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            app:srcCompat="@drawable/alarm" />
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="5 days left"
-            android:textColor="@color/dot_active"/>
     </LinearLayout>
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Starting bid: 450"
-        android:textColor="@color/dot_active"/>
 
 
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Winning bid: 680"
-        android:textColor="@color/dot_active"/>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Bidding Type: "
-            android:textColor="@color/dot_active"/>
-
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="English"
-            android:textColor="@color/dot_active"
-            android:textStyle="bold" />
-    </LinearLayout>
 
 </LinearLayout>
