--- a/app/src/main/res/layout/fragment_show_all_bid.xml
+++ b/app/src/main/res/layout/fragment_show_all_bid.xml
@@ -8,11 +8,16 @@
     <!-- TODO: Update blank fragment layout -->
 
     <TextView
-        android:text="Home / All Auctions"
-        android:padding="16dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:fontFamily="serif-monospace"
+        android:padding="16dp"
+        android:text="Home / All Auctions"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="24sp"
+        android:textStyle="bold" />
     <ListView
+        android:padding="16dp"
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
