--- a/app/src/main/res/layout/showbidbox.xml
+++ b/app/src/main/res/layout/showbidbox.xml
@@ -2,20 +2,17 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="350dp"
+    android:layout_width="250dp"
     android:orientation="vertical"
-    android:layout_height="270dp"
-    android:gravity="center">
+    android:layout_height="wrap_content">
 
     <ImageView
+        android:layout_gravity="center"
         android:id="@+id/imageView4"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:scaleType="fitXY"
-        app:srcCompat="@mipmap/ic_launcher"
-        tools:layout_editor_absoluteX="80dp"
-        tools:layout_editor_absoluteY="33dp" />
+        app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/textbox9"
@@ -31,14 +28,53 @@
         android:textAlignment="center"
         android:text="TextView" />
 
+    <TextView
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Enter your Bid here"/>
+
     <EditText
+        android:layout_gravity="center"
         android:id="@+id/editText9"
-        android:layout_width="match_parent"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Enter your Bid here"
-        android:inputType="textPersonName" />
+        android:inputType="number" />
 
+    <CheckBox
+        android:layout_gravity="center"
+        android:id="@+id/checkBox1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Automatic Bid" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Enter your maximum bid here:"/>
+
+    <EditText
+        android:id="@+id/editText10"
+        android:layout_width="150dp"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="number" />
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Increase per bid"/>
+
+    <EditText
+        android:layout_gravity="center"
+        android:id="@+id/editText11"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="number" />
     <Button
         android:id="@+id/bidnow"
         android:layout_width="match_parent"
